--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,16 @@ body {
     box-shadow: 0px 15px 30px 0px rgba(0,0,0,0.5);
 }
 
+.top-text,
+.bot-text {
+    margin: 10px 20px;
+}
+
 .screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
     height: 100px;
     width: 100%;
     background-color: #4E4E4E;
